# votr

./: Cargo.toml  Dockerfile  README.md
.claude/: settings.local.json
crates/server/: Cargo.toml
crates/server/src/: lobby.rs  main.rs  session.rs  types.rs  ws.rs
ui/: bunfig.toml  package.json  tsconfig.json
ui/src/: App.tsx  GitHubLink.tsx  LobbyBrowser.tsx  Toast.tsx  api.ts  index.html  index.tsx  names.ts  store.ts  types.ts  util.ts
ui/src/components/: DisconnectTimer.tsx  LobbySettingsForm.tsx  NameChip.tsx  PlayerStatus.tsx  useDraggableList.ts
ui/src/phases/: Adding.tsx  Lobby.tsx  Results.tsx  Vetoing.tsx  Voting.tsx
ui/src/styles/: index.css
