[package]
name = "server"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }

rust-embed = { version = "=8.5.0" }
axum-embed = { version = "=0.1.0" }
rand = "0.10.0"
dashmap = "6.1.0"
vector-map = "1.0.2"